# freicar_divedeep_competition

./: README.md  agent_description.json  setup_env.sh  start.sh
ros_code/: freicar.launch
ros_code/02-01-object-detection-exercise/ROS/perception_pkg/: perception_node.py  perception_node.sh
ros_code/02-01-object-detection-exercise/dataloader/: freicar_dataloader.py
ros_code/02-02-semantic-segmentation-exercise/ROS/ros_pkg/: lane_detector.py  lane_detector.sh
ros_code/03-01-localization-exercise/freicar_localization/launch/: evaluate.launch  freicar_localization.launch
ros_code/03-01-localization-exercise/freicar_localization/src/: particle_filter.cpp  particle_filter.h  ros_pf_localization.cpp  ros_pf_localization.h  ros_vis.cpp  ros_vis.h  sensor_model.cpp  sensor_model.h
ros_code/Freicar_DiveDeep/02-01-object-detection-exercise/: evaluate.py  inference.py
ros_code/Freicar_DiveDeep/02-02-semantic-segmentation-exercise/: README.md  train_segmentation.py
ros_code/Freicar_DiveDeep/02-02-semantic-segmentation-exercise/dataset_helper/: color_coder.py  (+2 more)
ros_code/freicar_control/: CMakeLists.txt  package.xml
ros_code/freicar_control/launch/: start_controller.launch
ros_code/freicar_divedeep/: start.sh
ros_code/freicar_divedeep/02-01-object-detection-exercise/: train.py  utils.py
ros_code/freicar_divedeep/freicar_control/: CMakeLists.txt  README.md
ros_code/freicar_divedeep/planner/: CMakeLists.txt  planner.launch
ros_code/planner/: CMakeLists.txt  package.xml  planner.launch  start.sh
ros_code/planner/src/: planner.cpp  planner.h
(+29 files in other folders)
